--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Amid Kamara <br />
 						Portfolio</h1>
-						<p>Business Analytics Postgraduate Skilled in Excel, SQL and Power Bi <a href="www.linkedin.com/in/amid-kamara-577096195"
+						<p>Business Analytics Postgraduate Skilled in Excel, SQL and Power Bi <a href="https://www.linkedin.com/in/amid-kamara-577096195/"
 				>@AmidKamara</a> <a href=></a><br />
 						 <a href=""></a></p>
 						<ul class="actions">
@@ -41,7 +41,7 @@
 							
 						</ul>
 						<ul class="icons">
-							<li><a href="www.linkedin.com/in/amid-kamara-577096195" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
+							<li><a href="https://www.linkedin.com/in/amid-kamara-577096195/" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
 						</ul>
 					</nav>
 
@@ -116,7 +116,7 @@
 								<h3>Social</h3>
 								<ul class="icons alt">
 									
-									<li><a href="www.linkedin.com/in/amid-kamara-577096195" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
+									<li><a href="https://www.linkedin.com/in/amid-kamara-577096195/" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
 								</ul>
 							</section>
 						</section>
