Update to Power Bi

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 										</a></h2>
 									</header>
 									<a href="https://github.com/amid97/Power-Bi" class="image fit"><img src="images/Power.jpg" alt="" /></a>
-									<p>In this Power Bi project.........</p>
+									<p>Created a dashboard with Power Bi to provide customer insight. Transformed and processed the data by using DAX and Excel to ensure data completeness and validity. Effectively display the findings using appropriate charts, graphs and map. </p>
 									<ul class="actions special">
 										<li><a href="https://github.com/amid97/Power-Bi" class="button">View Project</a></li>
 									</ul>
