--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 										</a></h2>
 									</header>
 									<a href="https://github.com/amid97/SQL-Project" class="image fit"><img src="images/SQL.webp" alt="" /></a>
-									<p>In this SQL project........</p>
+									<p>Developed a functional database prototype to store and manage customer records for Barclays bank account using SQL. Designed the database schema to accurately represent customer information, accounts, transactions, and related data. Developed SQL queries and scripts to perform various operations on the database, such as creating customer accounts, updating account details, and extracting data from 6 different related tables. </p>
 									<ul class="actions special">
 										<li><a href="https://github.com/amid97/SQL-Project" class="button">View Project</a></li>
 									</ul>
